# rest_api_poc

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
.github/workflows/: cli.yml  standalone.yml
all/: CMakeLists.txt
cli/: CMakeLists.txt
cli/source/: main.cpp
documentation/: CMakeLists.txt
include/ufm_client/: greeter.h  ufm_client.h
source/: greeter.cpp  ufm_client.cpp
standalone/: CMakeLists.txt
test/: CMakeLists.txt
test/source/: greeter.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
